examples/voting-app/manifests/mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: voting-app
  labels:
    app: mysql
spec:
    ports:
        - port: 3306
    selector:
        app: mysql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: voting-app
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql
        ports:
          - containerPort: 3306
        volumeMounts:
         - name: mysql-data
           mountPath: /var/lib/mysql
      volumes:
         - name: mysql-data
           emptyDir: {}
