examples/voting-app/manifests/results.yaml
kind: Service
apiVersion: v1
metadata:
  namespace: voting-app
  name: result
  labels:
    app: result
spec:
  ports:
    - port: 5002
      targetPort: 5002
  selector:
    app: result
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: result
  namespace: voting-app
  labels:
    app: result
spec:
  replicas: 1
  selector:
      matchLabels:
        app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      containers:
      - name: result
        image: results-app:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5002
