examples/voting-app/manifests/voting.yaml
kind: Service
apiVersion: v1
metadata:
  namespace: voting-app
  name: vote
  labels:
    app: vote
spec:
  ports:
    - port: 5001
  selector:
    app: vote
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote
  namespace: voting-app
  labels:
    app: vote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote
  template:
      metadata:
        labels:
          app: vote
      spec:
        containers:
        - name: vote
          image: localhost:vote-v1
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 5001
