examples/voting-app/manifests/worker.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: voting-app
  name: worker
  labels:
    app: worker
spec:
  ports:
    - port: 5000
  selector:
    app: worker
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: voting-app
  labels:
    app: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: worker-app:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
