examples/voting-app/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: voting-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # This annotation is used to rewrite the path of the request
    # to the backend service. In this case, the path is rewritten to /$1
    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
spec:
  ingressClassName: "nginx"
  rules:
  - host: voting-app.local
    http:
      paths:
        - path: /result/(.*)
          # This pathType is used to match the path of the request
          pathType: ImplementationSpecific
          backend:
            service:
              name: result
              port:
                number: 5002
        # implementationSpecific is used to match the path of the request using a regular expression
        # Prefix is used to match the path of the request using a prefix match. We should have issues
        # with redirects (e.g. css downloads)
        - path: /(.*)
          pathType: ImplementationSpecific
          backend:
            service:
                name: vote
                port:
                  number: 5001
    # alternative way to define the path for the result app
#  - host: result-app.local
#    http:
#      paths:
#        - path: /(.*)
#          pathType: ImplementationSpecific
#          backend:
#            service:
#              name: result
#              port:
#                number: 5002
